deployments/kubernetes/base/merchant/merchant-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: merchant
  namespace: payment-gateway
spec:
  selector:
    app: merchant
  ports:
    - name: http-metrics
      port: 8085
      targetPort: 8085
    - name: grpc
      port: 9005
      targetPort: 9005
  type: ClusterIP
